--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"biome:fix": "biome format --write src/ && biome lint --write src/"
 	},
 	"dependencies": {
+		"@egoist/tailwindcss-icons": "^1.8.1",
 		"@next/third-parties": "^14.2.11",
 		"gray-matter": "^4.0.3",
 		"next": "14.1.0",
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.0",
+		"@iconify-json/tabler": "^1.2.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
