--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
 		"react-markdown": "^9.0.1",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-raw": "^7.0.0",
+		"rehype-stringify": "^10.0.0",
 		"remark": "^15.0.1",
+		"remark-gfm": "^4.0.0",
 		"remark-html": "^16.0.1",
 		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.0",
 		"unified": "^11.0.4"
 	},
 	"devDependencies": {
