--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.0",
+		"@iconify-json/logos": "^1.2.0",
 		"@iconify-json/tabler": "^1.2.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
