--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-markdown": "^9.0.1",
+		"react-share": "^5.1.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-raw": "^7.0.0",
 		"rehype-stringify": "^10.0.0",
