--- a/package.json
+++ b/package.json
@@ -20,13 +20,7 @@
 		"react-share": "^5.1.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-raw": "^7.0.0",
-		"rehype-stringify": "^10.0.0",
-		"remark": "^15.0.1",
-		"remark-gfm": "^4.0.0",
-		"remark-html": "^16.0.1",
-		"remark-parse": "^11.0.0",
-		"remark-rehype": "^11.1.0",
-		"unified": "^11.0.4"
+		"remark": "^15.0.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.0",
