--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"ci": "biome ci ./src",
-		"biome:fix": "biome format --write src/ && biome lint --write src/"
+		"biome:fix": "biome format --write src/ && biome lint --write src/",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@egoist/tailwindcss-icons": "^1.8.1",
@@ -33,6 +34,7 @@
 		"autoprefixer": "^10.0.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vitest": "^4.0.4"
 	}
 }
